@@ -1,0 +1,15 @@
+<?xml version="1.0" ?>
+
+<!-- 
+	Citation Styles for import records.
+-->
+
+<cite:citation xmlns="http://www.w3.org/1999/xhtml" xmlns:cite="http://eprints.org/ep3/citation" xmlns:epc="http://eprints.org/ep3/control">
+
+<cite:linkhere><span class="ep_name_citation">
+<epc:print expr="importid"/>
+<epc:if test="description"><epc:print expr="description"/></epc:if>
+<epc:if test="url"><epc:print expr="url"/></epc:if>
+</span></cite:linkhere>
+
+</cite:citation>
